부트스트랩목차

--- a/index.html
+++ b/index.html
@@ -20,33 +20,88 @@
 <body>
 <!-- 상단헤더 -->
 <header class="text-center">
-  <h1><img src="./img/bootstrap-logo-shadow.png" alt=""><br>부트스트랩 V5.3.3</h1>
+  <h1><img src="0611/img/bootstrap-logo-shadow.png" alt=""><br>부트스트랩 V5.3.3</h1>
 </header>
 
 <!-- 메인 -->
 <main>
-  <section>
-    <dl>
-      <dt>부트스트랩 1일차(0607)</dt>
-      <dd><a href="0608/01검색엔진최적화.html">검색엔진최적화</a></dd>
-      <dd><a href="0608/02부트스트랩소개.html">부트스트랩소개/아이콘</a></dd>
-      <dd><a href="0608/03그리드레이아웃.html">그리드레이아웃(반응형)</a></dd>
-      <dd><a href="0608/04반응형그리드레이아웃.html">반응형그리드레이아웃_그리드 갤러리(마켓컬리)</a></dd>
-      <dd><a href="0608/05폼태그서식.html">폼태그서식/버튼/input</a></dd>
-      <dd><a href="0608/06로그인폼실습.html">로그인폼실습(경주로온)</a></dd>
-      <dt>부트스트랩 2일차(0609)</dt>
-      <dd><a href="0610/부트스트랩03_문단 텍스트 관련.html">문단 텍스트 관련(색, 정렬, 배경색, 크기)</a></dd>
-      <dd><a href="0610/부트스트랩04_테이블.html">테이블</a></dd>
-      <dd><a href="0610/부트스트랩05_이미지.html">이미지</a></dd>
-      <dd><a href="0610/부트스트랩06_버튼.html">버튼</a></dd>
-      <dd><a href="0610/부트스트랩07_페이지네이션.html">페이지네이션</a></dd>
-      <dd><a href="http://localhost/board_bootstrap/php/list.php">게시판 실습(http://localhost/board_bootstrap/php/list.php)</a></dd>
-      <dt>부트스트랩 3일차(0610)</dt>
-      <dd></dd>
-      <dt>부트스트랩 4일차(0611)</dt>
-      <dd></dd>
-    </dl>
-  </section>
+
+    <div class="accordion accordion-flush" id="accordionFlushExample">
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+            부트스트랩 1일차(0607)
+          </button>
+        </h2>
+        <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">
+            <ul>
+              <li><a href="0608/01검색엔진최적화.html">검색엔진최적화</a></li>
+              <li><a href="0608/02부트스트랩소개.html">부트스트랩소개/아이콘</a></li>
+              <li><a href="0608/03그리드레이아웃.html">그리드레이아웃(반응형)</a></li>
+              <li><a href="0608/04반응형그리드레이아웃.html">반응형그리드레이아웃_그리드 갤러리(마켓컬리)</a></li>
+              <li><a href="0608/05폼태그서식.html">폼태그서식/버튼/input</a></li>
+              <li><a href="0608/06로그인폼실습.html">로그인폼실습(경주로온)</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+            부트스트랩 2일차(0610)
+          </button>
+        </h2>
+        <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">
+            <ul>
+              <li><a href="0610/부트스트랩03_문단 텍스트 관련.html">문단 텍스트 관련(색, 정렬, 배경색, 크기)</a></li>
+              <li><a href="0610/부트스트랩04_테이블.html">테이블</a></li>
+              <li><a href="0610/부트스트랩05_이미지.html">이미지</a></li>
+              <li><a href="0610/부트스트랩06_버튼.html">버튼</a></li>
+              <li><a href="0610/부트스트랩07_페이지네이션.html">페이지네이션</a></li>
+              <li><a href="http://localhost/board_bootstrap/php/list.php">게시판 실습(http://localhost/board_bootstrap/php/list.php)</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+            부트스트랩 3일차(0611)
+          </button>
+        </h2>
+        <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">
+            <ul>
+              <li><a href="0611/부트스트랩08_폼태그.html">부트스트랩08_폼태그</a></li>
+              <li><a href="0611/부트스트랩09_경고.html">부트스트랩09_경고</a></li>
+              <li><a href="0611/부트스트랩10_모달윈도우_로그인.html">부트스트랩10_모달윈도우_로그인</a></li>
+              <li><a href="0611/부트스트랩_실습_회원가입양식.html">부트스트랩_실습_회원가입양식</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+            부트스트랩 4일차(0612)
+          </button>
+        </h2>
+        <div id="flush-collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">
+            <ul>
+              <li><a href="0612/부트스트랩11_아이콘.html">부트스트랩11_아이콘</a></li>
+              <li><a href="0612/부트스트랩12_휘장과 라벨.html">부트스트랩12_휘장과 라벨</a></li>
+              <li><a href="0612/부트스트랩13_진행바.html">부트스트랩13_진행바</a></li>
+              <li><a href="0612/부트스트랩14_카드디자인.html">부트스트랩14_카드디자인</a></li>
+              <li><a href="0612/부트스트랩_당근마켓_내물건팔기.html">부트스트랩_당근마켓_내물건팔기</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    </section>
 </main>
 
 <!-- 푸터 -->
